--- a/Try1/app/src/main/res/values/strings.xml
+++ b/Try1/app/src/main/res/values/strings.xml
@@ -1,11 +1,12 @@
 <resources>
-    <string name="app_name">MtlCare</string>
+    <string name="app_name">Montreal Students</string>
     <string name="title_home">Home</string>
     <string name="title_dashboard">Dashboard</string>
     <string name="title_notifications">Notifications</string>
     <string name="button_send">Done</string>
-    <string name="edit_message">Enter your Name</string>
-    <string name="edit_card">Enter Medical Care #</string>
+    <string name="edit_message">Enter the name of your school</string>
+    <string name="email_hint">Email</string>
+    <string name="password_hint">Password</string>
     <string name="button_blood">Blood Type</string>
     <string name="button_wh">Weight and Height</string>
     <string name="button_allergies">Allergies</string>
